# dev

./: .gitignore  README.md
assembly/: hello.lua  hello.ts  main.go  main.s  makefile
bash/: hello.sh
basic/: hello.bas
c/: hello.c
clojure/: hello.clj
go/: hello.go
go/dns-server/: Makefile  README.md  go.mod
go/dns-server/cmd/dns-server/: main.go
go/dns-server/dns/: builder.go  parser.go  parser_test.go  types.go  zone.go  zone_test.go
go/dns-server/zones/: example.com.zone
go/metrics-system/: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  go.mod
go/metrics-system/cmd/agent/: main.go
go/metrics-system/cmd/server/: main.go
go/metrics-system/configs/: agent.yaml  server.yaml
go/metrics-system/deployments/docker/: agent.Dockerfile  docker-compose.yml  server.Dockerfile
go/metrics-system/docs/: GO_CRASH_COURSE.md
go/metrics-system/grafana/datasources/: postgres.yaml
go/metrics-system/scripts/: init-db.sql  setup.sh
go/traceroute/: Makefile  README.md  go.mod  main.go
haskell/: hello.hs
haskell/.stack/: stack.sqlite3
haskell/hello-stack/: README.md  hello-stack.cabal  stack.yaml
haskell/hello-stack/.cabal/: config
haskell/hello-stack/.stack/: stack.sqlite3
haskell/hello-stack/app/: Main.hs
haskell/hello-stack/dist-newstyle/cache/: compiler  config
java/: Hello.java
js/: hello.js
lean/: Hello.lean
lua/: hello.lua
nodejs/: hello.js
perl/: hello.pl
python/: hello.py  init_go_project.py  init_python_project.py
python/Integer_to_Binary_with_While /: while_loop2binary.py
ruby/: hello.rb
rust/: hello.rs
(+16 files in other folders)
