cabal-version:       3.0
name:                hello-stack
version:             0.1.0.0
synopsis:            Simple hello-world executable
description:         A minimal Stack/Cabal project that prints hello.
homepage:            https://example.com
author:              Your Name
maintainer:          you@example.com
license:             BSD-3-Clause
license-file:        LICENSE
build-type:          Simple
extra-source-files:  README.md

executable hello-stack
  main-is:             Main.hs
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat
  build-depends:
      base >=4.17 && <4.20
